--- a/assets/pages/aboutUs.html
+++ b/assets/pages/aboutUs.html
@@ -39,7 +39,7 @@
         </section>
     </main>
     <footer id="footer">
-        <p>Created by : Stefania Rosales</p>
+        <p>Created by : 2023</p>
     </footer>
 </body>
 </html>
