--- a/assets/pages/raffle.html
+++ b/assets/pages/raffle.html
@@ -69,7 +69,7 @@
         </div>
     </main>
     <footer id="footer">
-        <p>Created by : Stefania Rosales 2023</p>
+        <p>Created by : 2023</p>
     </footer>
 </body>
 </html>
