--- a/assets/pages/contac.html
+++ b/assets/pages/contac.html
@@ -32,7 +32,7 @@
         </section>
     </main>
     <footer id="footer">
-        <p>Created by : Stefania Rosales</p>
+        <p>Created by : 2023</p>
     </footer>
 </body>
 </html>
