--- a/assets/pages/information.html
+++ b/assets/pages/information.html
@@ -50,7 +50,7 @@
             </table>
     </main>
     <footer id="footer">
-        <p>Created by : Stefania Rosales 2023</p>
+        <p>Created by : 2023</p>
     </footer>
 </body>
 </html>
