--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </main>
     <footer id="footer">
-        <p>Created by : Stefania Rosales</p>
+        <p>Created by : 2023</p>
     </footer>
 </body>
 </html>
